--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="bg-white">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/brand/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/images/brand/thegenlab.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Genesis Lab</title>
   </head>
